--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -47,11 +47,11 @@ jobs:
       
     - name: Build Docker image
       run: |
-        docker build -t nodejs-random-color-3108:latest .
+        docker build -t nodejs-random-color:latest .
         
     - name: Tag and push image to ECR
       run: |
-        docker tag nodejs-random-color-3108:${{ inputs.version }} ${{ env.ECR_REGISTRY }}/${{ env.ECR_REPOSITORY }}:latest
+        docker tag nodejs-random-color:${{ inputs.version }} ${{ env.ECR_REGISTRY }}/${{ env.ECR_REPOSITORY }}:latest
         docker push ${{ env.ECR_REGISTRY }}/${{ env.ECR_REPOSITORY }}:latest
         
     - name: Output image URI
